// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`default::CreateHasData > has the expected shape 1`] = `
{
  "data": ZodOptional {
    "_def": {
      "description": undefined,
      "errorMap": [Function],
      "innerType": ZodString {
        "_def": {
          "checks": [],
          "coerce": false,
          "typeName": "ZodString",
        },
        "and": [Function],
        "array": [Function],
        "brand": [Function],
        "catch": [Function],
        "default": [Function],
        "describe": [Function],
        "isNullable": [Function],
        "isOptional": [Function],
        "nullable": [Function],
        "nullish": [Function],
        "optional": [Function],
        "or": [Function],
        "parse": [Function],
        "parseAsync": [Function],
        "pipe": [Function],
        "promise": [Function],
        "readonly": [Function],
        "refine": [Function],
        "refinement": [Function],
        "safeParse": [Function],
        "safeParseAsync": [Function],
        "spa": [Function],
        "superRefine": [Function],
        "transform": [Function],
        "~standard": {
          "validate": [Function],
          "vendor": "zod",
          "version": 1,
        },
      },
      "typeName": "ZodOptional",
    },
    "and": [Function],
    "array": [Function],
    "brand": [Function],
    "catch": [Function],
    "default": [Function],
    "describe": [Function],
    "isNullable": [Function],
    "isOptional": [Function],
    "nullable": [Function],
    "nullish": [Function],
    "optional": [Function],
    "or": [Function],
    "parse": [Function],
    "parseAsync": [Function],
    "pipe": [Function],
    "promise": [Function],
    "readonly": [Function],
    "refine": [Function],
    "refinement": [Function],
    "safeParse": [Function],
    "safeParseAsync": [Function],
    "spa": [Function],
    "superRefine": [Function],
    "transform": [Function],
    "~standard": {
      "validate": [Function],
      "vendor": "zod",
      "version": 1,
    },
  },
}
`;

exports[`default::CreateHasTimestamps > has the expected shape 1`] = `
{
  "createdAt": ZodOptional {
    "_def": {
      "description": undefined,
      "errorMap": [Function],
      "innerType": ZodString {
        "_def": {
          "checks": [
            {
              "kind": "datetime",
              "local": false,
              "offset": true,
              "precision": null,
            },
          ],
          "coerce": false,
          "typeName": "ZodString",
        },
        "and": [Function],
        "array": [Function],
        "brand": [Function],
        "catch": [Function],
        "default": [Function],
        "describe": [Function],
        "isNullable": [Function],
        "isOptional": [Function],
        "nullable": [Function],
        "nullish": [Function],
        "optional": [Function],
        "or": [Function],
        "parse": [Function],
        "parseAsync": [Function],
        "pipe": [Function],
        "promise": [Function],
        "readonly": [Function],
        "refine": [Function],
        "refinement": [Function],
        "safeParse": [Function],
        "safeParseAsync": [Function],
        "spa": [Function],
        "superRefine": [Function],
        "transform": [Function],
        "~standard": {
          "validate": [Function],
          "vendor": "zod",
          "version": 1,
        },
      },
      "typeName": "ZodOptional",
    },
    "and": [Function],
    "array": [Function],
    "brand": [Function],
    "catch": [Function],
    "default": [Function],
    "describe": [Function],
    "isNullable": [Function],
    "isOptional": [Function],
    "nullable": [Function],
    "nullish": [Function],
    "optional": [Function],
    "or": [Function],
    "parse": [Function],
    "parseAsync": [Function],
    "pipe": [Function],
    "promise": [Function],
    "readonly": [Function],
    "refine": [Function],
    "refinement": [Function],
    "safeParse": [Function],
    "safeParseAsync": [Function],
    "spa": [Function],
    "superRefine": [Function],
    "transform": [Function],
    "~standard": {
      "validate": [Function],
      "vendor": "zod",
      "version": 1,
    },
  },
  "updatedAt": ZodOptional {
    "_def": {
      "description": undefined,
      "errorMap": [Function],
      "innerType": ZodString {
        "_def": {
          "checks": [
            {
              "kind": "datetime",
              "local": false,
              "offset": true,
              "precision": null,
            },
          ],
          "coerce": false,
          "typeName": "ZodString",
        },
        "and": [Function],
        "array": [Function],
        "brand": [Function],
        "catch": [Function],
        "default": [Function],
        "describe": [Function],
        "isNullable": [Function],
        "isOptional": [Function],
        "nullable": [Function],
        "nullish": [Function],
        "optional": [Function],
        "or": [Function],
        "parse": [Function],
        "parseAsync": [Function],
        "pipe": [Function],
        "promise": [Function],
        "readonly": [Function],
        "refine": [Function],
        "refinement": [Function],
        "safeParse": [Function],
        "safeParseAsync": [Function],
        "spa": [Function],
        "superRefine": [Function],
        "transform": [Function],
        "~standard": {
          "validate": [Function],
          "vendor": "zod",
          "version": 1,
        },
      },
      "typeName": "ZodOptional",
    },
    "and": [Function],
    "array": [Function],
    "brand": [Function],
    "catch": [Function],
    "default": [Function],
    "describe": [Function],
    "isNullable": [Function],
    "isOptional": [Function],
    "nullable": [Function],
    "nullish": [Function],
    "optional": [Function],
    "or": [Function],
    "parse": [Function],
    "parseAsync": [Function],
    "pipe": [Function],
    "promise": [Function],
    "readonly": [Function],
    "refine": [Function],
    "refinement": [Function],
    "safeParse": [Function],
    "safeParseAsync": [Function],
    "spa": [Function],
    "superRefine": [Function],
    "transform": [Function],
    "~standard": {
      "validate": [Function],
      "vendor": "zod",
      "version": 1,
    },
  },
}
`;

exports[`default::CreatePost > has the expected shape 1`] = `
{
  "data": ZodString {
    "_def": {
      "checks": [],
      "coerce": false,
      "typeName": "ZodString",
    },
    "and": [Function],
    "array": [Function],
    "brand": [Function],
    "catch": [Function],
    "default": [Function],
    "describe": [Function],
    "isNullable": [Function],
    "isOptional": [Function],
    "nullable": [Function],
    "nullish": [Function],
    "optional": [Function],
    "or": [Function],
    "parse": [Function],
    "parseAsync": [Function],
    "pipe": [Function],
    "promise": [Function],
    "readonly": [Function],
    "refine": [Function],
    "refinement": [Function],
    "safeParse": [Function],
    "safeParseAsync": [Function],
    "spa": [Function],
    "superRefine": [Function],
    "transform": [Function],
    "~standard": {
      "validate": [Function],
      "vendor": "zod",
      "version": 1,
    },
  },
  "externalId": ZodOptional {
    "_def": {
      "description": undefined,
      "errorMap": [Function],
      "innerType": ZodNumber {
        "_def": {
          "checks": [
            {
              "kind": "int",
              "message": undefined,
            },
            {
              "inclusive": true,
              "kind": "min",
              "message": undefined,
              "value": -32768,
            },
            {
              "inclusive": true,
              "kind": "max",
              "message": undefined,
              "value": 32767,
            },
          ],
          "coerce": false,
          "typeName": "ZodNumber",
        },
        "and": [Function],
        "array": [Function],
        "brand": [Function],
        "catch": [Function],
        "default": [Function],
        "describe": [Function],
        "isNullable": [Function],
        "isOptional": [Function],
        "max": [Function],
        "min": [Function],
        "nullable": [Function],
        "nullish": [Function],
        "optional": [Function],
        "or": [Function],
        "parse": [Function],
        "parseAsync": [Function],
        "pipe": [Function],
        "promise": [Function],
        "readonly": [Function],
        "refine": [Function],
        "refinement": [Function],
        "safeParse": [Function],
        "safeParseAsync": [Function],
        "spa": [Function],
        "step": [Function],
        "superRefine": [Function],
        "transform": [Function],
        "~standard": {
          "validate": [Function],
          "vendor": "zod",
          "version": 1,
        },
      },
      "typeName": "ZodOptional",
    },
    "and": [Function],
    "array": [Function],
    "brand": [Function],
    "catch": [Function],
    "default": [Function],
    "describe": [Function],
    "isNullable": [Function],
    "isOptional": [Function],
    "nullable": [Function],
    "nullish": [Function],
    "optional": [Function],
    "or": [Function],
    "parse": [Function],
    "parseAsync": [Function],
    "pipe": [Function],
    "promise": [Function],
    "readonly": [Function],
    "refine": [Function],
    "refinement": [Function],
    "safeParse": [Function],
    "safeParseAsync": [Function],
    "spa": [Function],
    "superRefine": [Function],
    "transform": [Function],
    "~standard": {
      "validate": [Function],
      "vendor": "zod",
      "version": 1,
    },
  },
  "metadata": ZodOptional {
    "_def": {
      "description": undefined,
      "errorMap": [Function],
      "innerType": ZodTuple {
        "_def": {
          "items": [
            ZodBigInt {
              "_def": {
                "checks": [
                  {
                    "inclusive": true,
                    "kind": "min",
                    "message": undefined,
                    "value": -9223372036854775808n,
                  },
                  {
                    "inclusive": true,
                    "kind": "max",
                    "message": undefined,
                    "value": 9223372036854775807n,
                  },
                ],
                "coerce": false,
                "typeName": "ZodBigInt",
              },
              "and": [Function],
              "array": [Function],
              "brand": [Function],
              "catch": [Function],
              "default": [Function],
              "describe": [Function],
              "isNullable": [Function],
              "isOptional": [Function],
              "max": [Function],
              "min": [Function],
              "nullable": [Function],
              "nullish": [Function],
              "optional": [Function],
              "or": [Function],
              "parse": [Function],
              "parseAsync": [Function],
              "pipe": [Function],
              "promise": [Function],
              "readonly": [Function],
              "refine": [Function],
              "refinement": [Function],
              "safeParse": [Function],
              "safeParseAsync": [Function],
              "spa": [Function],
              "superRefine": [Function],
              "transform": [Function],
              "~standard": {
                "validate": [Function],
                "vendor": "zod",
                "version": 1,
              },
            },
            ZodNumber {
              "_def": {
                "checks": [
                  {
                    "kind": "int",
                    "message": undefined,
                  },
                  {
                    "inclusive": true,
                    "kind": "min",
                    "message": undefined,
                    "value": -2147483648,
                  },
                  {
                    "inclusive": true,
                    "kind": "max",
                    "message": undefined,
                    "value": 2147483647,
                  },
                ],
                "coerce": false,
                "typeName": "ZodNumber",
              },
              "and": [Function],
              "array": [Function],
              "brand": [Function],
              "catch": [Function],
              "default": [Function],
              "describe": [Function],
              "isNullable": [Function],
              "isOptional": [Function],
              "max": [Function],
              "min": [Function],
              "nullable": [Function],
              "nullish": [Function],
              "optional": [Function],
              "or": [Function],
              "parse": [Function],
              "parseAsync": [Function],
              "pipe": [Function],
              "promise": [Function],
              "readonly": [Function],
              "refine": [Function],
              "refinement": [Function],
              "safeParse": [Function],
              "safeParseAsync": [Function],
              "spa": [Function],
              "step": [Function],
              "superRefine": [Function],
              "transform": [Function],
              "~standard": {
                "validate": [Function],
                "vendor": "zod",
                "version": 1,
              },
            },
            ZodNumber {
              "_def": {
                "checks": [
                  {
                    "kind": "int",
                    "message": undefined,
                  },
                  {
                    "inclusive": true,
                    "kind": "min",
                    "message": undefined,
                    "value": -32768,
                  },
                  {
                    "inclusive": true,
                    "kind": "max",
                    "message": undefined,
                    "value": 32767,
                  },
                ],
                "coerce": false,
                "typeName": "ZodNumber",
              },
              "and": [Function],
              "array": [Function],
              "brand": [Function],
              "catch": [Function],
              "default": [Function],
              "describe": [Function],
              "isNullable": [Function],
              "isOptional": [Function],
              "max": [Function],
              "min": [Function],
              "nullable": [Function],
              "nullish": [Function],
              "optional": [Function],
              "or": [Function],
              "parse": [Function],
              "parseAsync": [Function],
              "pipe": [Function],
              "promise": [Function],
              "readonly": [Function],
              "refine": [Function],
              "refinement": [Function],
              "safeParse": [Function],
              "safeParseAsync": [Function],
              "spa": [Function],
              "step": [Function],
              "superRefine": [Function],
              "transform": [Function],
              "~standard": {
                "validate": [Function],
                "vendor": "zod",
                "version": 1,
              },
            },
          ],
          "rest": null,
          "typeName": "ZodTuple",
        },
        "and": [Function],
        "array": [Function],
        "brand": [Function],
        "catch": [Function],
        "default": [Function],
        "describe": [Function],
        "isNullable": [Function],
        "isOptional": [Function],
        "nullable": [Function],
        "nullish": [Function],
        "optional": [Function],
        "or": [Function],
        "parse": [Function],
        "parseAsync": [Function],
        "pipe": [Function],
        "promise": [Function],
        "readonly": [Function],
        "refine": [Function],
        "refinement": [Function],
        "safeParse": [Function],
        "safeParseAsync": [Function],
        "spa": [Function],
        "superRefine": [Function],
        "transform": [Function],
        "~standard": {
          "validate": [Function],
          "vendor": "zod",
          "version": 1,
        },
      },
      "typeName": "ZodOptional",
    },
    "and": [Function],
    "array": [Function],
    "brand": [Function],
    "catch": [Function],
    "default": [Function],
    "describe": [Function],
    "isNullable": [Function],
    "isOptional": [Function],
    "nullable": [Function],
    "nullish": [Function],
    "optional": [Function],
    "or": [Function],
    "parse": [Function],
    "parseAsync": [Function],
    "pipe": [Function],
    "promise": [Function],
    "readonly": [Function],
    "refine": [Function],
    "refinement": [Function],
    "safeParse": [Function],
    "safeParseAsync": [Function],
    "spa": [Function],
    "superRefine": [Function],
    "transform": [Function],
    "~standard": {
      "validate": [Function],
      "vendor": "zod",
      "version": 1,
    },
  },
  "moduleTest": ZodOptional {
    "_def": {
      "description": undefined,
      "errorMap": [Function],
      "innerType": ZodEnum {
        "_def": {
          "typeName": "ZodEnum",
          "values": [
            "1",
            "2",
            "3",
            "4",
            "5",
          ],
        },
        "and": [Function],
        "array": [Function],
        "brand": [Function],
        "catch": [Function],
        "default": [Function],
        "describe": [Function],
        "isNullable": [Function],
        "isOptional": [Function],
        "nullable": [Function],
        "nullish": [Function],
        "optional": [Function],
        "or": [Function],
        "parse": [Function],
        "parseAsync": [Function],
        "pipe": [Function],
        "promise": [Function],
        "readonly": [Function],
        "refine": [Function],
        "refinement": [Function],
        "safeParse": [Function],
        "safeParseAsync": [Function],
        "spa": [Function],
        "superRefine": [Function],
        "transform": [Function],
        "~standard": {
          "validate": [Function],
          "vendor": "zod",
          "version": 1,
        },
      },
      "typeName": "ZodOptional",
    },
    "and": [Function],
    "array": [Function],
    "brand": [Function],
    "catch": [Function],
    "default": [Function],
    "describe": [Function],
    "isNullable": [Function],
    "isOptional": [Function],
    "nullable": [Function],
    "nullish": [Function],
    "optional": [Function],
    "or": [Function],
    "parse": [Function],
    "parseAsync": [Function],
    "pipe": [Function],
    "promise": [Function],
    "readonly": [Function],
    "refine": [Function],
    "refinement": [Function],
    "safeParse": [Function],
    "safeParseAsync": [Function],
    "spa": [Function],
    "superRefine": [Function],
    "transform": [Function],
    "~standard": {
      "validate": [Function],
      "vendor": "zod",
      "version": 1,
    },
  },
  "nestingTest": ZodOptional {
    "_def": {
      "description": undefined,
      "errorMap": [Function],
      "innerType": ZodArray {
        "_def": {
          "exactLength": null,
          "maxLength": null,
          "minLength": null,
          "type": ZodTuple {
            "_def": {
              "items": [
                ZodString {
                  "_def": {
                    "checks": [],
                    "coerce": false,
                    "typeName": "ZodString",
                  },
                  "and": [Function],
                  "array": [Function],
                  "brand": [Function],
                  "catch": [Function],
                  "default": [Function],
                  "describe": [Function],
                  "isNullable": [Function],
                  "isOptional": [Function],
                  "nullable": [Function],
                  "nullish": [Function],
                  "optional": [Function],
                  "or": [Function],
                  "parse": [Function],
                  "parseAsync": [Function],
                  "pipe": [Function],
                  "promise": [Function],
                  "readonly": [Function],
                  "refine": [Function],
                  "refinement": [Function],
                  "safeParse": [Function],
                  "safeParseAsync": [Function],
                  "spa": [Function],
                  "superRefine": [Function],
                  "transform": [Function],
                  "~standard": {
                    "validate": [Function],
                    "vendor": "zod",
                    "version": 1,
                  },
                },
                ZodNumber {
                  "_def": {
                    "checks": [
                      {
                        "kind": "int",
                        "message": undefined,
                      },
                      {
                        "inclusive": true,
                        "kind": "min",
                        "message": undefined,
                        "value": -32768,
                      },
                      {
                        "inclusive": true,
                        "kind": "max",
                        "message": undefined,
                        "value": 32767,
                      },
                    ],
                    "coerce": false,
                    "typeName": "ZodNumber",
                  },
                  "and": [Function],
                  "array": [Function],
                  "brand": [Function],
                  "catch": [Function],
                  "default": [Function],
                  "describe": [Function],
                  "isNullable": [Function],
                  "isOptional": [Function],
                  "max": [Function],
                  "min": [Function],
                  "nullable": [Function],
                  "nullish": [Function],
                  "optional": [Function],
                  "or": [Function],
                  "parse": [Function],
                  "parseAsync": [Function],
                  "pipe": [Function],
                  "promise": [Function],
                  "readonly": [Function],
                  "refine": [Function],
                  "refinement": [Function],
                  "safeParse": [Function],
                  "safeParseAsync": [Function],
                  "spa": [Function],
                  "step": [Function],
                  "superRefine": [Function],
                  "transform": [Function],
                  "~standard": {
                    "validate": [Function],
                    "vendor": "zod",
                    "version": 1,
                  },
                },
                ZodNumber {
                  "_def": {
                    "checks": [
                      {
                        "kind": "int",
                        "message": undefined,
                      },
                      {
                        "inclusive": true,
                        "kind": "min",
                        "message": undefined,
                        "value": -2147483648,
                      },
                      {
                        "inclusive": true,
                        "kind": "max",
                        "message": undefined,
                        "value": 2147483647,
                      },
                    ],
                    "coerce": false,
                    "typeName": "ZodNumber",
                  },
                  "and": [Function],
                  "array": [Function],
                  "brand": [Function],
                  "catch": [Function],
                  "default": [Function],
                  "describe": [Function],
                  "isNullable": [Function],
                  "isOptional": [Function],
                  "max": [Function],
                  "min": [Function],
                  "nullable": [Function],
                  "nullish": [Function],
                  "optional": [Function],
                  "or": [Function],
                  "parse": [Function],
                  "parseAsync": [Function],
                  "pipe": [Function],
                  "promise": [Function],
                  "readonly": [Function],
                  "refine": [Function],
                  "refinement": [Function],
                  "safeParse": [Function],
                  "safeParseAsync": [Function],
                  "spa": [Function],
                  "step": [Function],
                  "superRefine": [Function],
                  "transform": [Function],
                  "~standard": {
                    "validate": [Function],
                    "vendor": "zod",
                    "version": 1,
                  },
                },
                ZodBigInt {
                  "_def": {
                    "checks": [
                      {
                        "inclusive": true,
                        "kind": "min",
                        "message": undefined,
                        "value": -9223372036854775808n,
                      },
                      {
                        "inclusive": true,
                        "kind": "max",
                        "message": undefined,
                        "value": 9223372036854775807n,
                      },
                    ],
                    "coerce": false,
                    "typeName": "ZodBigInt",
                  },
                  "and": [Function],
                  "array": [Function],
                  "brand": [Function],
                  "catch": [Function],
                  "default": [Function],
                  "describe": [Function],
                  "isNullable": [Function],
                  "isOptional": [Function],
                  "max": [Function],
                  "min": [Function],
                  "nullable": [Function],
                  "nullish": [Function],
                  "optional": [Function],
                  "or": [Function],
                  "parse": [Function],
                  "parseAsync": [Function],
                  "pipe": [Function],
                  "promise": [Function],
                  "readonly": [Function],
                  "refine": [Function],
                  "refinement": [Function],
                  "safeParse": [Function],
                  "safeParseAsync": [Function],
                  "spa": [Function],
                  "superRefine": [Function],
                  "transform": [Function],
                  "~standard": {
                    "validate": [Function],
                    "vendor": "zod",
                    "version": 1,
                  },
                },
                ZodArray {
                  "_def": {
                    "exactLength": null,
                    "maxLength": null,
                    "minLength": null,
                    "type": ZodTuple {
                      "_def": {
                        "items": [
                          ZodNumber {
                            "_def": {
                              "checks": [
                                {
                                  "kind": "int",
                                  "message": undefined,
                                },
                                {
                                  "inclusive": true,
                                  "kind": "min",
                                  "message": undefined,
                                  "value": -32768,
                                },
                                {
                                  "inclusive": true,
                                  "kind": "max",
                                  "message": undefined,
                                  "value": 32767,
                                },
                              ],
                              "coerce": false,
                              "typeName": "ZodNumber",
                            },
                            "and": [Function],
                            "array": [Function],
                            "brand": [Function],
                            "catch": [Function],
                            "default": [Function],
                            "describe": [Function],
                            "isNullable": [Function],
                            "isOptional": [Function],
                            "max": [Function],
                            "min": [Function],
                            "nullable": [Function],
                            "nullish": [Function],
                            "optional": [Function],
                            "or": [Function],
                            "parse": [Function],
                            "parseAsync": [Function],
                            "pipe": [Function],
                            "promise": [Function],
                            "readonly": [Function],
                            "refine": [Function],
                            "refinement": [Function],
                            "safeParse": [Function],
                            "safeParseAsync": [Function],
                            "spa": [Function],
                            "step": [Function],
                            "superRefine": [Function],
                            "transform": [Function],
                            "~standard": {
                              "validate": [Function],
                              "vendor": "zod",
                              "version": 1,
                            },
                          },
                          ZodNumber {
                            "_def": {
                              "checks": [
                                {
                                  "kind": "int",
                                  "message": undefined,
                                },
                                {
                                  "inclusive": true,
                                  "kind": "min",
                                  "message": undefined,
                                  "value": -2147483648,
                                },
                                {
                                  "inclusive": true,
                                  "kind": "max",
                                  "message": undefined,
                                  "value": 2147483647,
                                },
                              ],
                              "coerce": false,
                              "typeName": "ZodNumber",
                            },
                            "and": [Function],
                            "array": [Function],
                            "brand": [Function],
                            "catch": [Function],
                            "default": [Function],
                            "describe": [Function],
                            "isNullable": [Function],
                            "isOptional": [Function],
                            "max": [Function],
                            "min": [Function],
                            "nullable": [Function],
                            "nullish": [Function],
                            "optional": [Function],
                            "or": [Function],
                            "parse": [Function],
                            "parseAsync": [Function],
                            "pipe": [Function],
                            "promise": [Function],
                            "readonly": [Function],
                            "refine": [Function],
                            "refinement": [Function],
                            "safeParse": [Function],
                            "safeParseAsync": [Function],
                            "spa": [Function],
                            "step": [Function],
                            "superRefine": [Function],
                            "transform": [Function],
                            "~standard": {
                              "validate": [Function],
                              "vendor": "zod",
                              "version": 1,
                            },
                          },
                        ],
                        "rest": null,
                        "typeName": "ZodTuple",
                      },
                      "and": [Function],
                      "array": [Function],
                      "brand": [Function],
                      "catch": [Function],
                      "default": [Function],
                      "describe": [Function],
                      "isNullable": [Function],
                      "isOptional": [Function],
                      "nullable": [Function],
                      "nullish": [Function],
                      "optional": [Function],
                      "or": [Function],
                      "parse": [Function],
                      "parseAsync": [Function],
                      "pipe": [Function],
                      "promise": [Function],
                      "readonly": [Function],
                      "refine": [Function],
                      "refinement": [Function],
                      "safeParse": [Function],
                      "safeParseAsync": [Function],
                      "spa": [Function],
                      "superRefine": [Function],
                      "transform": [Function],
                      "~standard": {
                        "validate": [Function],
                        "vendor": "zod",
                        "version": 1,
                      },
                    },
                    "typeName": "ZodArray",
                  },
                  "and": [Function],
                  "array": [Function],
                  "brand": [Function],
                  "catch": [Function],
                  "default": [Function],
                  "describe": [Function],
                  "isNullable": [Function],
                  "isOptional": [Function],
                  "nullable": [Function],
                  "nullish": [Function],
                  "optional": [Function],
                  "or": [Function],
                  "parse": [Function],
                  "parseAsync": [Function],
                  "pipe": [Function],
                  "promise": [Function],
                  "readonly": [Function],
                  "refine": [Function],
                  "refinement": [Function],
                  "safeParse": [Function],
                  "safeParseAsync": [Function],
                  "spa": [Function],
                  "superRefine": [Function],
                  "transform": [Function],
                  "~standard": {
                    "validate": [Function],
                    "vendor": "zod",
                    "version": 1,
                  },
                },
              ],
              "rest": null,
              "typeName": "ZodTuple",
            },
            "and": [Function],
            "array": [Function],
            "brand": [Function],
            "catch": [Function],
            "default": [Function],
            "describe": [Function],
            "isNullable": [Function],
            "isOptional": [Function],
            "nullable": [Function],
            "nullish": [Function],
            "optional": [Function],
            "or": [Function],
            "parse": [Function],
            "parseAsync": [Function],
            "pipe": [Function],
            "promise": [Function],
            "readonly": [Function],
            "refine": [Function],
            "refinement": [Function],
            "safeParse": [Function],
            "safeParseAsync": [Function],
            "spa": [Function],
            "superRefine": [Function],
            "transform": [Function],
            "~standard": {
              "validate": [Function],
              "vendor": "zod",
              "version": 1,
            },
          },
          "typeName": "ZodArray",
        },
        "and": [Function],
        "array": [Function],
        "brand": [Function],
        "catch": [Function],
        "default": [Function],
        "describe": [Function],
        "isNullable": [Function],
        "isOptional": [Function],
        "nullable": [Function],
        "nullish": [Function],
        "optional": [Function],
        "or": [Function],
        "parse": [Function],
        "parseAsync": [Function],
        "pipe": [Function],
        "promise": [Function],
        "readonly": [Function],
        "refine": [Function],
        "refinement": [Function],
        "safeParse": [Function],
        "safeParseAsync": [Function],
        "spa": [Function],
        "superRefine": [Function],
        "transform": [Function],
        "~standard": {
          "validate": [Function],
          "vendor": "zod",
          "version": 1,
        },
      },
      "typeName": "ZodOptional",
    },
    "and": [Function],
    "array": [Function],
    "brand": [Function],
    "catch": [Function],
    "default": [Function],
    "describe": [Function],
    "isNullable": [Function],
    "isOptional": [Function],
    "nullable": [Function],
    "nullish": [Function],
    "optional": [Function],
    "or": [Function],
    "parse": [Function],
    "parseAsync": [Function],
    "pipe": [Function],
    "promise": [Function],
    "readonly": [Function],
    "refine": [Function],
    "refinement": [Function],
    "safeParse": [Function],
    "safeParseAsync": [Function],
    "spa": [Function],
    "superRefine": [Function],
    "transform": [Function],
    "~standard": {
      "validate": [Function],
      "vendor": "zod",
      "version": 1,
    },
  },
  "status": ZodOptional {
    "_def": {
      "description": undefined,
      "errorMap": [Function],
      "innerType": ZodEnum {
        "_def": {
          "typeName": "ZodEnum",
          "values": [
            "Hidden",
            "Private",
            "Public",
            "Publish scheduled",
          ],
        },
        "and": [Function],
        "array": [Function],
        "brand": [Function],
        "catch": [Function],
        "default": [Function],
        "describe": [Function],
        "isNullable": [Function],
        "isOptional": [Function],
        "nullable": [Function],
        "nullish": [Function],
        "optional": [Function],
        "or": [Function],
        "parse": [Function],
        "parseAsync": [Function],
        "pipe": [Function],
        "promise": [Function],
        "readonly": [Function],
        "refine": [Function],
        "refinement": [Function],
        "safeParse": [Function],
        "safeParseAsync": [Function],
        "spa": [Function],
        "superRefine": [Function],
        "transform": [Function],
        "~standard": {
          "validate": [Function],
          "vendor": "zod",
          "version": 1,
        },
      },
      "typeName": "ZodOptional",
    },
    "and": [Function],
    "array": [Function],
    "brand": [Function],
    "catch": [Function],
    "default": [Function],
    "describe": [Function],
    "isNullable": [Function],
    "isOptional": [Function],
    "nullable": [Function],
    "nullish": [Function],
    "optional": [Function],
    "or": [Function],
    "parse": [Function],
    "parseAsync": [Function],
    "pipe": [Function],
    "promise": [Function],
    "readonly": [Function],
    "refine": [Function],
    "refinement": [Function],
    "safeParse": [Function],
    "safeParseAsync": [Function],
    "spa": [Function],
    "superRefine": [Function],
    "transform": [Function],
    "~standard": {
      "validate": [Function],
      "vendor": "zod",
      "version": 1,
    },
  },
  "tags": ZodArray {
    "_def": {
      "exactLength": null,
      "maxLength": null,
      "minLength": null,
      "type": ZodString {
        "_def": {
          "checks": [],
          "coerce": false,
          "typeName": "ZodString",
        },
        "and": [Function],
        "array": [Function],
        "brand": [Function],
        "catch": [Function],
        "default": [Function],
        "describe": [Function],
        "isNullable": [Function],
        "isOptional": [Function],
        "nullable": [Function],
        "nullish": [Function],
        "optional": [Function],
        "or": [Function],
        "parse": [Function],
        "parseAsync": [Function],
        "pipe": [Function],
        "promise": [Function],
        "readonly": [Function],
        "refine": [Function],
        "refinement": [Function],
        "safeParse": [Function],
        "safeParseAsync": [Function],
        "spa": [Function],
        "superRefine": [Function],
        "transform": [Function],
        "~standard": {
          "validate": [Function],
          "vendor": "zod",
          "version": 1,
        },
      },
      "typeName": "ZodArray",
    },
    "and": [Function],
    "array": [Function],
    "brand": [Function],
    "catch": [Function],
    "default": [Function],
    "describe": [Function],
    "isNullable": [Function],
    "isOptional": [Function],
    "nullable": [Function],
    "nullish": [Function],
    "optional": [Function],
    "or": [Function],
    "parse": [Function],
    "parseAsync": [Function],
    "pipe": [Function],
    "promise": [Function],
    "readonly": [Function],
    "refine": [Function],
    "refinement": [Function],
    "safeParse": [Function],
    "safeParseAsync": [Function],
    "spa": [Function],
    "superRefine": [Function],
    "transform": [Function],
    "~standard": {
      "validate": [Function],
      "vendor": "zod",
      "version": 1,
    },
  },
}
`;

exports[`default::CreatePost > has the expected shape 2`] = `
{
  "createdAt": ZodOptional {
    "_def": {
      "description": undefined,
      "errorMap": [Function],
      "innerType": ZodString {
        "_def": {
          "checks": [
            {
              "kind": "datetime",
              "local": false,
              "offset": true,
              "precision": null,
            },
          ],
          "coerce": false,
          "typeName": "ZodString",
        },
        "and": [Function],
        "array": [Function],
        "brand": [Function],
        "catch": [Function],
        "default": [Function],
        "describe": [Function],
        "isNullable": [Function],
        "isOptional": [Function],
        "nullable": [Function],
        "nullish": [Function],
        "optional": [Function],
        "or": [Function],
        "parse": [Function],
        "parseAsync": [Function],
        "pipe": [Function],
        "promise": [Function],
        "readonly": [Function],
        "refine": [Function],
        "refinement": [Function],
        "safeParse": [Function],
        "safeParseAsync": [Function],
        "spa": [Function],
        "superRefine": [Function],
        "transform": [Function],
        "~standard": {
          "validate": [Function],
          "vendor": "zod",
          "version": 1,
        },
      },
      "typeName": "ZodOptional",
    },
    "and": [Function],
    "array": [Function],
    "brand": [Function],
    "catch": [Function],
    "default": [Function],
    "describe": [Function],
    "isNullable": [Function],
    "isOptional": [Function],
    "nullable": [Function],
    "nullish": [Function],
    "optional": [Function],
    "or": [Function],
    "parse": [Function],
    "parseAsync": [Function],
    "pipe": [Function],
    "promise": [Function],
    "readonly": [Function],
    "refine": [Function],
    "refinement": [Function],
    "safeParse": [Function],
    "safeParseAsync": [Function],
    "spa": [Function],
    "superRefine": [Function],
    "transform": [Function],
    "~standard": {
      "validate": [Function],
      "vendor": "zod",
      "version": 1,
    },
  },
  "emailAddress": ZodString {
    "_def": {
      "checks": [
        {
          "kind": "regex",
          "regex": /\\^\\[a-zA-Z0-9\\.!#\\$%&'\\*\\+/=\\?\\^_\`\\{\\|\\}~-\\]\\+@\\[a-zA-Z0-9\\]\\(\\?:\\[a-zA-Z0-9-\\]\\{0,61\\}\\[a-zA-Z0-9\\]\\)\\?\\(\\?:\\\\\\.\\[a-zA-Z0-9\\]\\(\\?:\\[a-zA-Z0-9-\\]\\{0,61\\}\\[a-zA-Z0-9\\]\\)\\?\\)\\*\\$/,
        },
      ],
      "coerce": false,
      "typeName": "ZodString",
    },
    "and": [Function],
    "array": [Function],
    "brand": [Function],
    "catch": [Function],
    "default": [Function],
    "describe": [Function],
    "isNullable": [Function],
    "isOptional": [Function],
    "nullable": [Function],
    "nullish": [Function],
    "optional": [Function],
    "or": [Function],
    "parse": [Function],
    "parseAsync": [Function],
    "pipe": [Function],
    "promise": [Function],
    "readonly": [Function],
    "refine": [Function],
    "refinement": [Function],
    "safeParse": [Function],
    "safeParseAsync": [Function],
    "spa": [Function],
    "superRefine": [Function],
    "transform": [Function],
    "~standard": {
      "validate": [Function],
      "vendor": "zod",
      "version": 1,
    },
  },
  "name": ZodString {
    "_def": {
      "checks": [],
      "coerce": false,
      "typeName": "ZodString",
    },
    "and": [Function],
    "array": [Function],
    "brand": [Function],
    "catch": [Function],
    "default": [Function],
    "describe": [Function],
    "isNullable": [Function],
    "isOptional": [Function],
    "nullable": [Function],
    "nullish": [Function],
    "optional": [Function],
    "or": [Function],
    "parse": [Function],
    "parseAsync": [Function],
    "pipe": [Function],
    "promise": [Function],
    "readonly": [Function],
    "refine": [Function],
    "refinement": [Function],
    "safeParse": [Function],
    "safeParseAsync": [Function],
    "spa": [Function],
    "superRefine": [Function],
    "transform": [Function],
    "~standard": {
      "validate": [Function],
      "vendor": "zod",
      "version": 1,
    },
  },
  "password": ZodString {
    "_def": {
      "checks": [],
      "coerce": false,
      "typeName": "ZodString",
    },
    "and": [Function],
    "array": [Function],
    "brand": [Function],
    "catch": [Function],
    "default": [Function],
    "describe": [Function],
    "isNullable": [Function],
    "isOptional": [Function],
    "nullable": [Function],
    "nullish": [Function],
    "optional": [Function],
    "or": [Function],
    "parse": [Function],
    "parseAsync": [Function],
    "pipe": [Function],
    "promise": [Function],
    "readonly": [Function],
    "refine": [Function],
    "refinement": [Function],
    "safeParse": [Function],
    "safeParseAsync": [Function],
    "spa": [Function],
    "superRefine": [Function],
    "transform": [Function],
    "~standard": {
      "validate": [Function],
      "vendor": "zod",
      "version": 1,
    },
  },
  "updatedAt": ZodOptional {
    "_def": {
      "description": undefined,
      "errorMap": [Function],
      "innerType": ZodString {
        "_def": {
          "checks": [
            {
              "kind": "datetime",
              "local": false,
              "offset": true,
              "precision": null,
            },
          ],
          "coerce": false,
          "typeName": "ZodString",
        },
        "and": [Function],
        "array": [Function],
        "brand": [Function],
        "catch": [Function],
        "default": [Function],
        "describe": [Function],
        "isNullable": [Function],
        "isOptional": [Function],
        "nullable": [Function],
        "nullish": [Function],
        "optional": [Function],
        "or": [Function],
        "parse": [Function],
        "parseAsync": [Function],
        "pipe": [Function],
        "promise": [Function],
        "readonly": [Function],
        "refine": [Function],
        "refinement": [Function],
        "safeParse": [Function],
        "safeParseAsync": [Function],
        "spa": [Function],
        "superRefine": [Function],
        "transform": [Function],
        "~standard": {
          "validate": [Function],
          "vendor": "zod",
          "version": 1,
        },
      },
      "typeName": "ZodOptional",
    },
    "and": [Function],
    "array": [Function],
    "brand": [Function],
    "catch": [Function],
    "default": [Function],
    "describe": [Function],
    "isNullable": [Function],
    "isOptional": [Function],
    "nullable": [Function],
    "nullish": [Function],
    "optional": [Function],
    "or": [Function],
    "parse": [Function],
    "parseAsync": [Function],
    "pipe": [Function],
    "promise": [Function],
    "readonly": [Function],
    "refine": [Function],
    "refinement": [Function],
    "safeParse": [Function],
    "safeParseAsync": [Function],
    "spa": [Function],
    "superRefine": [Function],
    "transform": [Function],
    "~standard": {
      "validate": [Function],
      "vendor": "zod",
      "version": 1,
    },
  },
}
`;

exports[`default::PostStatus > has the expected values 1`] = `
[
  "Hidden",
  "Private",
  "Public",
  "Publish scheduled",
]
`;

exports[`default::UpdateHasData > has the expected shape 1`] = `
{
  "data": ZodOptional {
    "_def": {
      "description": undefined,
      "errorMap": [Function],
      "innerType": ZodString {
        "_def": {
          "checks": [],
          "coerce": false,
          "typeName": "ZodString",
        },
        "and": [Function],
        "array": [Function],
        "brand": [Function],
        "catch": [Function],
        "default": [Function],
        "describe": [Function],
        "isNullable": [Function],
        "isOptional": [Function],
        "nullable": [Function],
        "nullish": [Function],
        "optional": [Function],
        "or": [Function],
        "parse": [Function],
        "parseAsync": [Function],
        "pipe": [Function],
        "promise": [Function],
        "readonly": [Function],
        "refine": [Function],
        "refinement": [Function],
        "safeParse": [Function],
        "safeParseAsync": [Function],
        "spa": [Function],
        "superRefine": [Function],
        "transform": [Function],
        "~standard": {
          "validate": [Function],
          "vendor": "zod",
          "version": 1,
        },
      },
      "typeName": "ZodOptional",
    },
    "and": [Function],
    "array": [Function],
    "brand": [Function],
    "catch": [Function],
    "default": [Function],
    "describe": [Function],
    "isNullable": [Function],
    "isOptional": [Function],
    "nullable": [Function],
    "nullish": [Function],
    "optional": [Function],
    "or": [Function],
    "parse": [Function],
    "parseAsync": [Function],
    "pipe": [Function],
    "promise": [Function],
    "readonly": [Function],
    "refine": [Function],
    "refinement": [Function],
    "safeParse": [Function],
    "safeParseAsync": [Function],
    "spa": [Function],
    "superRefine": [Function],
    "transform": [Function],
    "~standard": {
      "validate": [Function],
      "vendor": "zod",
      "version": 1,
    },
  },
}
`;

exports[`default::UpdateHasTimestamps > has the expected shape 1`] = `
{
  "updatedAt": ZodOptional {
    "_def": {
      "description": undefined,
      "errorMap": [Function],
      "innerType": ZodString {
        "_def": {
          "checks": [
            {
              "kind": "datetime",
              "local": false,
              "offset": true,
              "precision": null,
            },
          ],
          "coerce": false,
          "typeName": "ZodString",
        },
        "and": [Function],
        "array": [Function],
        "brand": [Function],
        "catch": [Function],
        "default": [Function],
        "describe": [Function],
        "isNullable": [Function],
        "isOptional": [Function],
        "nullable": [Function],
        "nullish": [Function],
        "optional": [Function],
        "or": [Function],
        "parse": [Function],
        "parseAsync": [Function],
        "pipe": [Function],
        "promise": [Function],
        "readonly": [Function],
        "refine": [Function],
        "refinement": [Function],
        "safeParse": [Function],
        "safeParseAsync": [Function],
        "spa": [Function],
        "superRefine": [Function],
        "transform": [Function],
        "~standard": {
          "validate": [Function],
          "vendor": "zod",
          "version": 1,
        },
      },
      "typeName": "ZodOptional",
    },
    "and": [Function],
    "array": [Function],
    "brand": [Function],
    "catch": [Function],
    "default": [Function],
    "describe": [Function],
    "isNullable": [Function],
    "isOptional": [Function],
    "nullable": [Function],
    "nullish": [Function],
    "optional": [Function],
    "or": [Function],
    "parse": [Function],
    "parseAsync": [Function],
    "pipe": [Function],
    "promise": [Function],
    "readonly": [Function],
    "refine": [Function],
    "refinement": [Function],
    "safeParse": [Function],
    "safeParseAsync": [Function],
    "spa": [Function],
    "superRefine": [Function],
    "transform": [Function],
    "~standard": {
      "validate": [Function],
      "vendor": "zod",
      "version": 1,
    },
  },
}
`;

exports[`default::UpdatePost > has the expected shape 1`] = `
{
  "data": ZodString {
    "_def": {
      "checks": [],
      "coerce": false,
      "typeName": "ZodString",
    },
    "and": [Function],
    "array": [Function],
    "brand": [Function],
    "catch": [Function],
    "default": [Function],
    "describe": [Function],
    "isNullable": [Function],
    "isOptional": [Function],
    "nullable": [Function],
    "nullish": [Function],
    "optional": [Function],
    "or": [Function],
    "parse": [Function],
    "parseAsync": [Function],
    "pipe": [Function],
    "promise": [Function],
    "readonly": [Function],
    "refine": [Function],
    "refinement": [Function],
    "safeParse": [Function],
    "safeParseAsync": [Function],
    "spa": [Function],
    "superRefine": [Function],
    "transform": [Function],
    "~standard": {
      "validate": [Function],
      "vendor": "zod",
      "version": 1,
    },
  },
  "externalId": ZodOptional {
    "_def": {
      "description": undefined,
      "errorMap": [Function],
      "innerType": ZodNumber {
        "_def": {
          "checks": [
            {
              "kind": "int",
              "message": undefined,
            },
            {
              "inclusive": true,
              "kind": "min",
              "message": undefined,
              "value": -32768,
            },
            {
              "inclusive": true,
              "kind": "max",
              "message": undefined,
              "value": 32767,
            },
          ],
          "coerce": false,
          "typeName": "ZodNumber",
        },
        "and": [Function],
        "array": [Function],
        "brand": [Function],
        "catch": [Function],
        "default": [Function],
        "describe": [Function],
        "isNullable": [Function],
        "isOptional": [Function],
        "max": [Function],
        "min": [Function],
        "nullable": [Function],
        "nullish": [Function],
        "optional": [Function],
        "or": [Function],
        "parse": [Function],
        "parseAsync": [Function],
        "pipe": [Function],
        "promise": [Function],
        "readonly": [Function],
        "refine": [Function],
        "refinement": [Function],
        "safeParse": [Function],
        "safeParseAsync": [Function],
        "spa": [Function],
        "step": [Function],
        "superRefine": [Function],
        "transform": [Function],
        "~standard": {
          "validate": [Function],
          "vendor": "zod",
          "version": 1,
        },
      },
      "typeName": "ZodOptional",
    },
    "and": [Function],
    "array": [Function],
    "brand": [Function],
    "catch": [Function],
    "default": [Function],
    "describe": [Function],
    "isNullable": [Function],
    "isOptional": [Function],
    "nullable": [Function],
    "nullish": [Function],
    "optional": [Function],
    "or": [Function],
    "parse": [Function],
    "parseAsync": [Function],
    "pipe": [Function],
    "promise": [Function],
    "readonly": [Function],
    "refine": [Function],
    "refinement": [Function],
    "safeParse": [Function],
    "safeParseAsync": [Function],
    "spa": [Function],
    "superRefine": [Function],
    "transform": [Function],
    "~standard": {
      "validate": [Function],
      "vendor": "zod",
      "version": 1,
    },
  },
  "metadata": ZodOptional {
    "_def": {
      "description": undefined,
      "errorMap": [Function],
      "innerType": ZodTuple {
        "_def": {
          "items": [
            ZodBigInt {
              "_def": {
                "checks": [
                  {
                    "inclusive": true,
                    "kind": "min",
                    "message": undefined,
                    "value": -9223372036854775808n,
                  },
                  {
                    "inclusive": true,
                    "kind": "max",
                    "message": undefined,
                    "value": 9223372036854775807n,
                  },
                ],
                "coerce": false,
                "typeName": "ZodBigInt",
              },
              "and": [Function],
              "array": [Function],
              "brand": [Function],
              "catch": [Function],
              "default": [Function],
              "describe": [Function],
              "isNullable": [Function],
              "isOptional": [Function],
              "max": [Function],
              "min": [Function],
              "nullable": [Function],
              "nullish": [Function],
              "optional": [Function],
              "or": [Function],
              "parse": [Function],
              "parseAsync": [Function],
              "pipe": [Function],
              "promise": [Function],
              "readonly": [Function],
              "refine": [Function],
              "refinement": [Function],
              "safeParse": [Function],
              "safeParseAsync": [Function],
              "spa": [Function],
              "superRefine": [Function],
              "transform": [Function],
              "~standard": {
                "validate": [Function],
                "vendor": "zod",
                "version": 1,
              },
            },
            ZodNumber {
              "_def": {
                "checks": [
                  {
                    "kind": "int",
                    "message": undefined,
                  },
                  {
                    "inclusive": true,
                    "kind": "min",
                    "message": undefined,
                    "value": -2147483648,
                  },
                  {
                    "inclusive": true,
                    "kind": "max",
                    "message": undefined,
                    "value": 2147483647,
                  },
                ],
                "coerce": false,
                "typeName": "ZodNumber",
              },
              "and": [Function],
              "array": [Function],
              "brand": [Function],
              "catch": [Function],
              "default": [Function],
              "describe": [Function],
              "isNullable": [Function],
              "isOptional": [Function],
              "max": [Function],
              "min": [Function],
              "nullable": [Function],
              "nullish": [Function],
              "optional": [Function],
              "or": [Function],
              "parse": [Function],
              "parseAsync": [Function],
              "pipe": [Function],
              "promise": [Function],
              "readonly": [Function],
              "refine": [Function],
              "refinement": [Function],
              "safeParse": [Function],
              "safeParseAsync": [Function],
              "spa": [Function],
              "step": [Function],
              "superRefine": [Function],
              "transform": [Function],
              "~standard": {
                "validate": [Function],
                "vendor": "zod",
                "version": 1,
              },
            },
            ZodNumber {
              "_def": {
                "checks": [
                  {
                    "kind": "int",
                    "message": undefined,
                  },
                  {
                    "inclusive": true,
                    "kind": "min",
                    "message": undefined,
                    "value": -32768,
                  },
                  {
                    "inclusive": true,
                    "kind": "max",
                    "message": undefined,
                    "value": 32767,
                  },
                ],
                "coerce": false,
                "typeName": "ZodNumber",
              },
              "and": [Function],
              "array": [Function],
              "brand": [Function],
              "catch": [Function],
              "default": [Function],
              "describe": [Function],
              "isNullable": [Function],
              "isOptional": [Function],
              "max": [Function],
              "min": [Function],
              "nullable": [Function],
              "nullish": [Function],
              "optional": [Function],
              "or": [Function],
              "parse": [Function],
              "parseAsync": [Function],
              "pipe": [Function],
              "promise": [Function],
              "readonly": [Function],
              "refine": [Function],
              "refinement": [Function],
              "safeParse": [Function],
              "safeParseAsync": [Function],
              "spa": [Function],
              "step": [Function],
              "superRefine": [Function],
              "transform": [Function],
              "~standard": {
                "validate": [Function],
                "vendor": "zod",
                "version": 1,
              },
            },
          ],
          "rest": null,
          "typeName": "ZodTuple",
        },
        "and": [Function],
        "array": [Function],
        "brand": [Function],
        "catch": [Function],
        "default": [Function],
        "describe": [Function],
        "isNullable": [Function],
        "isOptional": [Function],
        "nullable": [Function],
        "nullish": [Function],
        "optional": [Function],
        "or": [Function],
        "parse": [Function],
        "parseAsync": [Function],
        "pipe": [Function],
        "promise": [Function],
        "readonly": [Function],
        "refine": [Function],
        "refinement": [Function],
        "safeParse": [Function],
        "safeParseAsync": [Function],
        "spa": [Function],
        "superRefine": [Function],
        "transform": [Function],
        "~standard": {
          "validate": [Function],
          "vendor": "zod",
          "version": 1,
        },
      },
      "typeName": "ZodOptional",
    },
    "and": [Function],
    "array": [Function],
    "brand": [Function],
    "catch": [Function],
    "default": [Function],
    "describe": [Function],
    "isNullable": [Function],
    "isOptional": [Function],
    "nullable": [Function],
    "nullish": [Function],
    "optional": [Function],
    "or": [Function],
    "parse": [Function],
    "parseAsync": [Function],
    "pipe": [Function],
    "promise": [Function],
    "readonly": [Function],
    "refine": [Function],
    "refinement": [Function],
    "safeParse": [Function],
    "safeParseAsync": [Function],
    "spa": [Function],
    "superRefine": [Function],
    "transform": [Function],
    "~standard": {
      "validate": [Function],
      "vendor": "zod",
      "version": 1,
    },
  },
  "moduleTest": ZodOptional {
    "_def": {
      "description": undefined,
      "errorMap": [Function],
      "innerType": ZodEnum {
        "_def": {
          "typeName": "ZodEnum",
          "values": [
            "1",
            "2",
            "3",
            "4",
            "5",
          ],
        },
        "and": [Function],
        "array": [Function],
        "brand": [Function],
        "catch": [Function],
        "default": [Function],
        "describe": [Function],
        "isNullable": [Function],
        "isOptional": [Function],
        "nullable": [Function],
        "nullish": [Function],
        "optional": [Function],
        "or": [Function],
        "parse": [Function],
        "parseAsync": [Function],
        "pipe": [Function],
        "promise": [Function],
        "readonly": [Function],
        "refine": [Function],
        "refinement": [Function],
        "safeParse": [Function],
        "safeParseAsync": [Function],
        "spa": [Function],
        "superRefine": [Function],
        "transform": [Function],
        "~standard": {
          "validate": [Function],
          "vendor": "zod",
          "version": 1,
        },
      },
      "typeName": "ZodOptional",
    },
    "and": [Function],
    "array": [Function],
    "brand": [Function],
    "catch": [Function],
    "default": [Function],
    "describe": [Function],
    "isNullable": [Function],
    "isOptional": [Function],
    "nullable": [Function],
    "nullish": [Function],
    "optional": [Function],
    "or": [Function],
    "parse": [Function],
    "parseAsync": [Function],
    "pipe": [Function],
    "promise": [Function],
    "readonly": [Function],
    "refine": [Function],
    "refinement": [Function],
    "safeParse": [Function],
    "safeParseAsync": [Function],
    "spa": [Function],
    "superRefine": [Function],
    "transform": [Function],
    "~standard": {
      "validate": [Function],
      "vendor": "zod",
      "version": 1,
    },
  },
  "nestingTest": ZodOptional {
    "_def": {
      "description": undefined,
      "errorMap": [Function],
      "innerType": ZodArray {
        "_def": {
          "exactLength": null,
          "maxLength": null,
          "minLength": null,
          "type": ZodTuple {
            "_def": {
              "items": [
                ZodString {
                  "_def": {
                    "checks": [],
                    "coerce": false,
                    "typeName": "ZodString",
                  },
                  "and": [Function],
                  "array": [Function],
                  "brand": [Function],
                  "catch": [Function],
                  "default": [Function],
                  "describe": [Function],
                  "isNullable": [Function],
                  "isOptional": [Function],
                  "nullable": [Function],
                  "nullish": [Function],
                  "optional": [Function],
                  "or": [Function],
                  "parse": [Function],
                  "parseAsync": [Function],
                  "pipe": [Function],
                  "promise": [Function],
                  "readonly": [Function],
                  "refine": [Function],
                  "refinement": [Function],
                  "safeParse": [Function],
                  "safeParseAsync": [Function],
                  "spa": [Function],
                  "superRefine": [Function],
                  "transform": [Function],
                  "~standard": {
                    "validate": [Function],
                    "vendor": "zod",
                    "version": 1,
                  },
                },
                ZodNumber {
                  "_def": {
                    "checks": [
                      {
                        "kind": "int",
                        "message": undefined,
                      },
                      {
                        "inclusive": true,
                        "kind": "min",
                        "message": undefined,
                        "value": -32768,
                      },
                      {
                        "inclusive": true,
                        "kind": "max",
                        "message": undefined,
                        "value": 32767,
                      },
                    ],
                    "coerce": false,
                    "typeName": "ZodNumber",
                  },
                  "and": [Function],
                  "array": [Function],
                  "brand": [Function],
                  "catch": [Function],
                  "default": [Function],
                  "describe": [Function],
                  "isNullable": [Function],
                  "isOptional": [Function],
                  "max": [Function],
                  "min": [Function],
                  "nullable": [Function],
                  "nullish": [Function],
                  "optional": [Function],
                  "or": [Function],
                  "parse": [Function],
                  "parseAsync": [Function],
                  "pipe": [Function],
                  "promise": [Function],
                  "readonly": [Function],
                  "refine": [Function],
                  "refinement": [Function],
                  "safeParse": [Function],
                  "safeParseAsync": [Function],
                  "spa": [Function],
                  "step": [Function],
                  "superRefine": [Function],
                  "transform": [Function],
                  "~standard": {
                    "validate": [Function],
                    "vendor": "zod",
                    "version": 1,
                  },
                },
                ZodNumber {
                  "_def": {
                    "checks": [
                      {
                        "kind": "int",
                        "message": undefined,
                      },
                      {
                        "inclusive": true,
                        "kind": "min",
                        "message": undefined,
                        "value": -2147483648,
                      },
                      {
                        "inclusive": true,
                        "kind": "max",
                        "message": undefined,
                        "value": 2147483647,
                      },
                    ],
                    "coerce": false,
                    "typeName": "ZodNumber",
                  },
                  "and": [Function],
                  "array": [Function],
                  "brand": [Function],
                  "catch": [Function],
                  "default": [Function],
                  "describe": [Function],
                  "isNullable": [Function],
                  "isOptional": [Function],
                  "max": [Function],
                  "min": [Function],
                  "nullable": [Function],
                  "nullish": [Function],
                  "optional": [Function],
                  "or": [Function],
                  "parse": [Function],
                  "parseAsync": [Function],
                  "pipe": [Function],
                  "promise": [Function],
                  "readonly": [Function],
                  "refine": [Function],
                  "refinement": [Function],
                  "safeParse": [Function],
                  "safeParseAsync": [Function],
                  "spa": [Function],
                  "step": [Function],
                  "superRefine": [Function],
                  "transform": [Function],
                  "~standard": {
                    "validate": [Function],
                    "vendor": "zod",
                    "version": 1,
                  },
                },
                ZodBigInt {
                  "_def": {
                    "checks": [
                      {
                        "inclusive": true,
                        "kind": "min",
                        "message": undefined,
                        "value": -9223372036854775808n,
                      },
                      {
                        "inclusive": true,
                        "kind": "max",
                        "message": undefined,
                        "value": 9223372036854775807n,
                      },
                    ],
                    "coerce": false,
                    "typeName": "ZodBigInt",
                  },
                  "and": [Function],
                  "array": [Function],
                  "brand": [Function],
                  "catch": [Function],
                  "default": [Function],
                  "describe": [Function],
                  "isNullable": [Function],
                  "isOptional": [Function],
                  "max": [Function],
                  "min": [Function],
                  "nullable": [Function],
                  "nullish": [Function],
                  "optional": [Function],
                  "or": [Function],
                  "parse": [Function],
                  "parseAsync": [Function],
                  "pipe": [Function],
                  "promise": [Function],
                  "readonly": [Function],
                  "refine": [Function],
                  "refinement": [Function],
                  "safeParse": [Function],
                  "safeParseAsync": [Function],
                  "spa": [Function],
                  "superRefine": [Function],
                  "transform": [Function],
                  "~standard": {
                    "validate": [Function],
                    "vendor": "zod",
                    "version": 1,
                  },
                },
                ZodArray {
                  "_def": {
                    "exactLength": null,
                    "maxLength": null,
                    "minLength": null,
                    "type": ZodTuple {
                      "_def": {
                        "items": [
                          ZodNumber {
                            "_def": {
                              "checks": [
                                {
                                  "kind": "int",
                                  "message": undefined,
                                },
                                {
                                  "inclusive": true,
                                  "kind": "min",
                                  "message": undefined,
                                  "value": -32768,
                                },
                                {
                                  "inclusive": true,
                                  "kind": "max",
                                  "message": undefined,
                                  "value": 32767,
                                },
                              ],
                              "coerce": false,
                              "typeName": "ZodNumber",
                            },
                            "and": [Function],
                            "array": [Function],
                            "brand": [Function],
                            "catch": [Function],
                            "default": [Function],
                            "describe": [Function],
                            "isNullable": [Function],
                            "isOptional": [Function],
                            "max": [Function],
                            "min": [Function],
                            "nullable": [Function],
                            "nullish": [Function],
                            "optional": [Function],
                            "or": [Function],
                            "parse": [Function],
                            "parseAsync": [Function],
                            "pipe": [Function],
                            "promise": [Function],
                            "readonly": [Function],
                            "refine": [Function],
                            "refinement": [Function],
                            "safeParse": [Function],
                            "safeParseAsync": [Function],
                            "spa": [Function],
                            "step": [Function],
                            "superRefine": [Function],
                            "transform": [Function],
                            "~standard": {
                              "validate": [Function],
                              "vendor": "zod",
                              "version": 1,
                            },
                          },
                          ZodNumber {
                            "_def": {
                              "checks": [
                                {
                                  "kind": "int",
                                  "message": undefined,
                                },
                                {
                                  "inclusive": true,
                                  "kind": "min",
                                  "message": undefined,
                                  "value": -2147483648,
                                },
                                {
                                  "inclusive": true,
                                  "kind": "max",
                                  "message": undefined,
                                  "value": 2147483647,
                                },
                              ],
                              "coerce": false,
                              "typeName": "ZodNumber",
                            },
                            "and": [Function],
                            "array": [Function],
                            "brand": [Function],
                            "catch": [Function],
                            "default": [Function],
                            "describe": [Function],
                            "isNullable": [Function],
                            "isOptional": [Function],
                            "max": [Function],
                            "min": [Function],
                            "nullable": [Function],
                            "nullish": [Function],
                            "optional": [Function],
                            "or": [Function],
                            "parse": [Function],
                            "parseAsync": [Function],
                            "pipe": [Function],
                            "promise": [Function],
                            "readonly": [Function],
                            "refine": [Function],
                            "refinement": [Function],
                            "safeParse": [Function],
                            "safeParseAsync": [Function],
                            "spa": [Function],
                            "step": [Function],
                            "superRefine": [Function],
                            "transform": [Function],
                            "~standard": {
                              "validate": [Function],
                              "vendor": "zod",
                              "version": 1,
                            },
                          },
                        ],
                        "rest": null,
                        "typeName": "ZodTuple",
                      },
                      "and": [Function],
                      "array": [Function],
                      "brand": [Function],
                      "catch": [Function],
                      "default": [Function],
                      "describe": [Function],
                      "isNullable": [Function],
                      "isOptional": [Function],
                      "nullable": [Function],
                      "nullish": [Function],
                      "optional": [Function],
                      "or": [Function],
                      "parse": [Function],
                      "parseAsync": [Function],
                      "pipe": [Function],
                      "promise": [Function],
                      "readonly": [Function],
                      "refine": [Function],
                      "refinement": [Function],
                      "safeParse": [Function],
                      "safeParseAsync": [Function],
                      "spa": [Function],
                      "superRefine": [Function],
                      "transform": [Function],
                      "~standard": {
                        "validate": [Function],
                        "vendor": "zod",
                        "version": 1,
                      },
                    },
                    "typeName": "ZodArray",
                  },
                  "and": [Function],
                  "array": [Function],
                  "brand": [Function],
                  "catch": [Function],
                  "default": [Function],
                  "describe": [Function],
                  "isNullable": [Function],
                  "isOptional": [Function],
                  "nullable": [Function],
                  "nullish": [Function],
                  "optional": [Function],
                  "or": [Function],
                  "parse": [Function],
                  "parseAsync": [Function],
                  "pipe": [Function],
                  "promise": [Function],
                  "readonly": [Function],
                  "refine": [Function],
                  "refinement": [Function],
                  "safeParse": [Function],
                  "safeParseAsync": [Function],
                  "spa": [Function],
                  "superRefine": [Function],
                  "transform": [Function],
                  "~standard": {
                    "validate": [Function],
                    "vendor": "zod",
                    "version": 1,
                  },
                },
              ],
              "rest": null,
              "typeName": "ZodTuple",
            },
            "and": [Function],
            "array": [Function],
            "brand": [Function],
            "catch": [Function],
            "default": [Function],
            "describe": [Function],
            "isNullable": [Function],
            "isOptional": [Function],
            "nullable": [Function],
            "nullish": [Function],
            "optional": [Function],
            "or": [Function],
            "parse": [Function],
            "parseAsync": [Function],
            "pipe": [Function],
            "promise": [Function],
            "readonly": [Function],
            "refine": [Function],
            "refinement": [Function],
            "safeParse": [Function],
            "safeParseAsync": [Function],
            "spa": [Function],
            "superRefine": [Function],
            "transform": [Function],
            "~standard": {
              "validate": [Function],
              "vendor": "zod",
              "version": 1,
            },
          },
          "typeName": "ZodArray",
        },
        "and": [Function],
        "array": [Function],
        "brand": [Function],
        "catch": [Function],
        "default": [Function],
        "describe": [Function],
        "isNullable": [Function],
        "isOptional": [Function],
        "nullable": [Function],
        "nullish": [Function],
        "optional": [Function],
        "or": [Function],
        "parse": [Function],
        "parseAsync": [Function],
        "pipe": [Function],
        "promise": [Function],
        "readonly": [Function],
        "refine": [Function],
        "refinement": [Function],
        "safeParse": [Function],
        "safeParseAsync": [Function],
        "spa": [Function],
        "superRefine": [Function],
        "transform": [Function],
        "~standard": {
          "validate": [Function],
          "vendor": "zod",
          "version": 1,
        },
      },
      "typeName": "ZodOptional",
    },
    "and": [Function],
    "array": [Function],
    "brand": [Function],
    "catch": [Function],
    "default": [Function],
    "describe": [Function],
    "isNullable": [Function],
    "isOptional": [Function],
    "nullable": [Function],
    "nullish": [Function],
    "optional": [Function],
    "or": [Function],
    "parse": [Function],
    "parseAsync": [Function],
    "pipe": [Function],
    "promise": [Function],
    "readonly": [Function],
    "refine": [Function],
    "refinement": [Function],
    "safeParse": [Function],
    "safeParseAsync": [Function],
    "spa": [Function],
    "superRefine": [Function],
    "transform": [Function],
    "~standard": {
      "validate": [Function],
      "vendor": "zod",
      "version": 1,
    },
  },
  "status": ZodOptional {
    "_def": {
      "description": undefined,
      "errorMap": [Function],
      "innerType": ZodEnum {
        "_def": {
          "typeName": "ZodEnum",
          "values": [
            "Hidden",
            "Private",
            "Public",
            "Publish scheduled",
          ],
        },
        "and": [Function],
        "array": [Function],
        "brand": [Function],
        "catch": [Function],
        "default": [Function],
        "describe": [Function],
        "isNullable": [Function],
        "isOptional": [Function],
        "nullable": [Function],
        "nullish": [Function],
        "optional": [Function],
        "or": [Function],
        "parse": [Function],
        "parseAsync": [Function],
        "pipe": [Function],
        "promise": [Function],
        "readonly": [Function],
        "refine": [Function],
        "refinement": [Function],
        "safeParse": [Function],
        "safeParseAsync": [Function],
        "spa": [Function],
        "superRefine": [Function],
        "transform": [Function],
        "~standard": {
          "validate": [Function],
          "vendor": "zod",
          "version": 1,
        },
      },
      "typeName": "ZodOptional",
    },
    "and": [Function],
    "array": [Function],
    "brand": [Function],
    "catch": [Function],
    "default": [Function],
    "describe": [Function],
    "isNullable": [Function],
    "isOptional": [Function],
    "nullable": [Function],
    "nullish": [Function],
    "optional": [Function],
    "or": [Function],
    "parse": [Function],
    "parseAsync": [Function],
    "pipe": [Function],
    "promise": [Function],
    "readonly": [Function],
    "refine": [Function],
    "refinement": [Function],
    "safeParse": [Function],
    "safeParseAsync": [Function],
    "spa": [Function],
    "superRefine": [Function],
    "transform": [Function],
    "~standard": {
      "validate": [Function],
      "vendor": "zod",
      "version": 1,
    },
  },
  "tags": ZodArray {
    "_def": {
      "exactLength": null,
      "maxLength": null,
      "minLength": null,
      "type": ZodString {
        "_def": {
          "checks": [],
          "coerce": false,
          "typeName": "ZodString",
        },
        "and": [Function],
        "array": [Function],
        "brand": [Function],
        "catch": [Function],
        "default": [Function],
        "describe": [Function],
        "isNullable": [Function],
        "isOptional": [Function],
        "nullable": [Function],
        "nullish": [Function],
        "optional": [Function],
        "or": [Function],
        "parse": [Function],
        "parseAsync": [Function],
        "pipe": [Function],
        "promise": [Function],
        "readonly": [Function],
        "refine": [Function],
        "refinement": [Function],
        "safeParse": [Function],
        "safeParseAsync": [Function],
        "spa": [Function],
        "superRefine": [Function],
        "transform": [Function],
        "~standard": {
          "validate": [Function],
          "vendor": "zod",
          "version": 1,
        },
      },
      "typeName": "ZodArray",
    },
    "and": [Function],
    "array": [Function],
    "brand": [Function],
    "catch": [Function],
    "default": [Function],
    "describe": [Function],
    "isNullable": [Function],
    "isOptional": [Function],
    "nullable": [Function],
    "nullish": [Function],
    "optional": [Function],
    "or": [Function],
    "parse": [Function],
    "parseAsync": [Function],
    "pipe": [Function],
    "promise": [Function],
    "readonly": [Function],
    "refine": [Function],
    "refinement": [Function],
    "safeParse": [Function],
    "safeParseAsync": [Function],
    "spa": [Function],
    "superRefine": [Function],
    "transform": [Function],
    "~standard": {
      "validate": [Function],
      "vendor": "zod",
      "version": 1,
    },
  },
}
`;

exports[`default::UpdateUser > has the expected shape 1`] = `
{
  "emailAddress": ZodString {
    "_def": {
      "checks": [
        {
          "kind": "regex",
          "regex": /\\^\\[a-zA-Z0-9\\.!#\\$%&'\\*\\+/=\\?\\^_\`\\{\\|\\}~-\\]\\+@\\[a-zA-Z0-9\\]\\(\\?:\\[a-zA-Z0-9-\\]\\{0,61\\}\\[a-zA-Z0-9\\]\\)\\?\\(\\?:\\\\\\.\\[a-zA-Z0-9\\]\\(\\?:\\[a-zA-Z0-9-\\]\\{0,61\\}\\[a-zA-Z0-9\\]\\)\\?\\)\\*\\$/,
        },
      ],
      "coerce": false,
      "typeName": "ZodString",
    },
    "and": [Function],
    "array": [Function],
    "brand": [Function],
    "catch": [Function],
    "default": [Function],
    "describe": [Function],
    "isNullable": [Function],
    "isOptional": [Function],
    "nullable": [Function],
    "nullish": [Function],
    "optional": [Function],
    "or": [Function],
    "parse": [Function],
    "parseAsync": [Function],
    "pipe": [Function],
    "promise": [Function],
    "readonly": [Function],
    "refine": [Function],
    "refinement": [Function],
    "safeParse": [Function],
    "safeParseAsync": [Function],
    "spa": [Function],
    "superRefine": [Function],
    "transform": [Function],
    "~standard": {
      "validate": [Function],
      "vendor": "zod",
      "version": 1,
    },
  },
  "name": ZodString {
    "_def": {
      "checks": [],
      "coerce": false,
      "typeName": "ZodString",
    },
    "and": [Function],
    "array": [Function],
    "brand": [Function],
    "catch": [Function],
    "default": [Function],
    "describe": [Function],
    "isNullable": [Function],
    "isOptional": [Function],
    "nullable": [Function],
    "nullish": [Function],
    "optional": [Function],
    "or": [Function],
    "parse": [Function],
    "parseAsync": [Function],
    "pipe": [Function],
    "promise": [Function],
    "readonly": [Function],
    "refine": [Function],
    "refinement": [Function],
    "safeParse": [Function],
    "safeParseAsync": [Function],
    "spa": [Function],
    "superRefine": [Function],
    "transform": [Function],
    "~standard": {
      "validate": [Function],
      "vendor": "zod",
      "version": 1,
    },
  },
  "password": ZodString {
    "_def": {
      "checks": [],
      "coerce": false,
      "typeName": "ZodString",
    },
    "and": [Function],
    "array": [Function],
    "brand": [Function],
    "catch": [Function],
    "default": [Function],
    "describe": [Function],
    "isNullable": [Function],
    "isOptional": [Function],
    "nullable": [Function],
    "nullish": [Function],
    "optional": [Function],
    "or": [Function],
    "parse": [Function],
    "parseAsync": [Function],
    "pipe": [Function],
    "promise": [Function],
    "readonly": [Function],
    "refine": [Function],
    "refinement": [Function],
    "safeParse": [Function],
    "safeParseAsync": [Function],
    "spa": [Function],
    "superRefine": [Function],
    "transform": [Function],
    "~standard": {
      "validate": [Function],
      "vendor": "zod",
      "version": 1,
    },
  },
  "updatedAt": ZodOptional {
    "_def": {
      "description": undefined,
      "errorMap": [Function],
      "innerType": ZodString {
        "_def": {
          "checks": [
            {
              "kind": "datetime",
              "local": false,
              "offset": true,
              "precision": null,
            },
          ],
          "coerce": false,
          "typeName": "ZodString",
        },
        "and": [Function],
        "array": [Function],
        "brand": [Function],
        "catch": [Function],
        "default": [Function],
        "describe": [Function],
        "isNullable": [Function],
        "isOptional": [Function],
        "nullable": [Function],
        "nullish": [Function],
        "optional": [Function],
        "or": [Function],
        "parse": [Function],
        "parseAsync": [Function],
        "pipe": [Function],
        "promise": [Function],
        "readonly": [Function],
        "refine": [Function],
        "refinement": [Function],
        "safeParse": [Function],
        "safeParseAsync": [Function],
        "spa": [Function],
        "superRefine": [Function],
        "transform": [Function],
        "~standard": {
          "validate": [Function],
          "vendor": "zod",
          "version": 1,
        },
      },
      "typeName": "ZodOptional",
    },
    "and": [Function],
    "array": [Function],
    "brand": [Function],
    "catch": [Function],
    "default": [Function],
    "describe": [Function],
    "isNullable": [Function],
    "isOptional": [Function],
    "nullable": [Function],
    "nullish": [Function],
    "optional": [Function],
    "or": [Function],
    "parse": [Function],
    "parseAsync": [Function],
    "pipe": [Function],
    "promise": [Function],
    "readonly": [Function],
    "refine": [Function],
    "refinement": [Function],
    "safeParse": [Function],
    "safeParseAsync": [Function],
    "spa": [Function],
    "superRefine": [Function],
    "transform": [Function],
    "~standard": {
      "validate": [Function],
      "vendor": "zod",
      "version": 1,
    },
  },
}
`;
